@@ -10,11 +10,17 @@
  * the NG driver at a later time.
  */
 
-/* Set up the CLI environment */
-require_once dirname(__FILE__) . '/../../lib/Application.php';
+if (file_exists(dirname(__FILE__) . '/../../turba/lib/Application.php')) {
+    $baseDir = dirname(__FILE__) . '/../';
+} else {
+    require_once 'PEAR/Config.php';
+    $baseDir = PEAR_Config::singleton()
+        ->get('horde_dir', null, 'pear.horde.org') . '/turba/';
+}
+require_once $baseDir . 'lib/Application.php';
 Horde_Registry::appInit('turba', array('cli' => true));
 
-require_once dirname(__FILE__) . '/../../migration/3_turba_upgrade_sqlng.php';
+require_once $baseDir . 'migration/3_turba_upgrade_sqlng.php';
 
 $db = $injector->getInstance('Horde_Db_Adapter');
 $migration = new TurbaUpgradeSqlng($db);
