@@ -18,13 +18,19 @@
  * @package Turba
  */
 
-// Load Horde and Turba enviroments
-require_once dirname(__FILE__) . '/../lib/Application.php';
+if (file_exists(dirname(__FILE__) . '/../../turba/lib/Application.php')) {
+    $baseDir = dirname(__FILE__) . '/../';
+} else {
+    require_once 'PEAR/Config.php';
+    $baseDir = PEAR_Config::singleton()
+        ->get('horde_dir', null, 'pear.horde.org') . '/turba/';
+}
+require_once $baseDir . 'lib/Application.php';
 Horde_Registry::appInit('turba', array('cli' => true, 'user_admin' => true));
 
-$CLI->writeln('This script will turn all entries in the SQL address book into a globally shared address book.');
-$CLI->writeln('Make sure you read the script comments and be sure you know what you are doing.');
-$sure = $CLI->prompt('Are you ' . $CLI->bold('sure') . ' you want to do this?', array('no', 'yes'));
+$cli->writeln('This script will turn all entries in the SQL address book into a globally shared address book.');
+$cli->writeln('Make sure you read the script comments and be sure you know what you are doing.');
+$sure = $cli->prompt('Are you ' . $cli->bold('sure') . ' you want to do this?', array('no', 'yes'));
 if (!$sure) {
     exit;
 }
@@ -40,19 +46,19 @@ if ($auth->hasCapability('list')) {
 
 // Get all the details.
 do {
-    $owner = $CLI->prompt('Username of the user you would like to own the new public source.');
+    $owner = $cli->prompt('Username of the user you would like to own the new public source.');
     // Might as well check this if we have the list.
     if (!empty($users) && !in_array($owner, $users)) {
-        $CLI->message($owner . ' is not a valid user!', 'cli.error');
+        $cli->message($owner . ' is not a valid user!', 'cli.error');
         $owner = '';
     }
 } while(!$owner);
 
 do {
-    $title = $CLI->prompt('Enter the title you would like to give to the new public source.');
+    $title = $cli->prompt('Enter the title you would like to give to the new public source.');
 } while (!$title);
 
-$sourceKey = $CLI->prompt('What is the internal name of the share we are converting? [localsql]');
+$sourceKey = $cli->prompt('What is the internal name of the share we are converting? [localsql]');
 if (!$sourceKey) {
     $sourceKey = 'localsql';
 }
@@ -64,7 +70,7 @@ $share->set('owner', $owner);
 $share->set('perm_default', Horde_Perms::SHOW | Horde_Perms::READ);
 $turba_shares->addShare($share);
 $share->save();
-$CLI->message('Created new Horde_Share object for the shared address book.', 'cli.success');
+$cli->message('Created new Horde_Share object for the shared address book.', 'cli.success');
 
 // Share created, now get a Turba_Driver and make the changes.
 $driver = $injector->getInstance('Turba_Factory_Driver')->create($sourceKey);
@@ -75,7 +81,7 @@ $db = &$driver->_db;
 $tableName = $db->dsn['table'];
 $SQL = 'SELECT COUNT(*) FROM ' . $tableName . ';';
 $count = $db->getOne($SQL);
-$CLI->message("Moving $count contacts to $title.", 'cli.message');
+$cli->message("Moving $count contacts to $title.", 'cli.message');
 $SQL = 'UPDATE ' . $tableName . ' SET owner_id=\'' . $owner_uid . '\';';
 $result = $db->query($SQL);
 if ($result instanceof PEAR_Error) {
@@ -85,33 +91,33 @@ if ($result instanceof PEAR_Error) {
 $prefDriver = $conf['prefs']['driver'];
 if ($prefDriver == 'sql') {
     // Automatically append this source to the addressbooks pref if desired.
-    $autoAppend = $CLI->prompt('Would you like to add the new public source to every user\'s address book preference?', array('no', 'yes'));
+    $autoAppend = $cli->prompt('Would you like to add the new public source to every user\'s address book preference?', array('no', 'yes'));
     if ($autoAppend) {
         $SQL = 'SELECT pref_uid, pref_value FROM horde_prefs WHERE pref_scope=\'turba\' AND pref_name=\'addressbooks\';';
         $results = $db->getAll($SQL);
         if ($results instanceof PEAR_Error) {
-           $CLI->message('There was an error updating the user preferences: ' . $results->getMessage(), 'cli.error');
+           $cli->message('There was an error updating the user preferences: ' . $results->getMessage(), 'cli.error');
         } else {
             foreach ($results as $row) {
                 $newValue = $row[1] . "\n$sourceKey:$owner_uid";
                 $SQL = 'UPDATE horde_prefs SET pref_value=\'' . $newValue . '\' WHERE pref_uid=\'' . $row[0] . '\' AND pref_scope=\'turba\' AND pref_name=\'addressbooks\';';
                 $result = $db->query($SQL);
                 if ($result instanceof PEAR_Error) {
-                    $CLI->message('Could not update preferences for ' . $row[0] . ': ' . $result->getMessage(), 'cli.error');
+                    $cli->message('Could not update preferences for ' . $row[0] . ': ' . $result->getMessage(), 'cli.error');
                 }
             }
         }
         if (!($results instanceof PEAR_Error)) {
-            $CLI->message('Successfully added new shared address book to the user preferences.', 'cli.success');
+            $cli->message('Successfully added new shared address book to the user preferences.', 'cli.success');
         }
     }
 } else {
-    $CLI->message('Your preference backend does not support updating all user preferences.', 'cli.warning');
-    $CLI->message('Your users may have to manually add the new shared address book to their "addressbook" preference.', 'cli.warning');
+    $cli->message('Your preference backend does not support updating all user preferences.', 'cli.warning');
+    $cli->message('Your users may have to manually add the new shared address book to their "addressbook" preference.', 'cli.warning');
 }
 
 // Share our success.
-$CLI->writeln($CLI->bold("*** $title successfully created ***"));
-$CLI->writeln('Share Info:');
-$CLI->writeln($CLI->indent('Title: ' . $share->get('name')));
-$CLI->writeln($CLI->indent('Owner: ' . $share->get('owner')));
+$cli->writeln($cli->bold("*** $title successfully created ***"));
+$cli->writeln('Share Info:');
+$cli->writeln($cli->indent('Title: ' . $share->get('name')));
+$cli->writeln($cli->indent('Owner: ' . $share->get('owner')));
