@@ -28,8 +28,8 @@
   <email>jan@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2011-03-29</date>
- <time>23:59:04</time>
+ <date>2011-03-31</date>
+ <time>15:30:27</time>
  <version>
   <release>3.0.0</release>
   <api>3.0.0</api>
@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Move all executable scripts to bin/ and prefix with turba-.
 * [jan] Add fields to the first address if multiple passed to addField() API method (Request #3482).
  </notes>
  <contents>
@@ -50,7 +51,16 @@
     <file name="edit.php" role="horde" />
     <file name="index.php" role="horde" />
    </dir> <!-- /addressbooks -->
+   <dir name="bin">
+    <file name="turba-convert-datatree-shares-to-sql" role="script" />
+    <file name="turba-convert-sql-shares-to-sqlng" role="script" />
+    <file name="turba-import-squirrelmail-file-abook" role="script" />
+    <file name="turba-import-squirrelmail-sql-abook" role="script" />
+    <file name="turba-import-vcards" role="script" />
+    <file name="turba-public-to-horde-share" role="script" />
+   </dir> <!-- /bin -->
    <dir name="config">
+    <file name=".htaccess" role="horde" />
     <file name="attributes.php" role="horde" />
     <file name="backends.php" role="horde" />
     <file name="conf.xml" role="horde" />
@@ -159,6 +169,7 @@
      <file name="EditContact.php" role="horde" />
      <file name="List.php" role="horde" />
     </dir> <!-- /lib/View -->
+    <file name=".htaccess" role="horde" />
     <file name="Api.php" role="horde" />
     <file name="Application.php" role="horde" />
     <file name="Driver.php" role="horde" />
@@ -412,6 +423,7 @@
       <file name="turba.po" role="horde" />
      </dir> <!-- /locale/zh_TW/LC_MESSAGES -->
     </dir> <!-- /locale/zh_TW -->
+    <file name=".htaccess" role="horde" />
     <file name="turba.pot" role="horde" />
    </dir> <!-- /locale -->
    <dir name="migration">
@@ -426,14 +438,7 @@
      <file name="addou" role="data" />
      <file name="addou.pl" role="data" />
     </dir> <!-- /scripts/ldap -->
-    <dir name="upgrades">
-     <file name="convert_datatree_shares_to_sql.php" role="data" />
-     <file name="convert_sql_shares_to_sqlng.php" role="data" />
-     <file name="public_to_horde_share.php" role="data" />
-    </dir> <!-- /scripts/upgrades -->
-    <file name="import_squirrelmail_file_abook.php" role="data" />
-    <file name="import_squirrelmail_sql_abook.php" role="data" />
-    <file name="import_vcards.php" role="data" />
+    <file name=".htaccess" role="data" />
     <file name="Turba.reg" role="data" />
    </dir> <!-- /scripts -->
    <dir name="templates">
@@ -475,6 +480,7 @@
     <dir name="test">
      <file name="ldapserver.inc" role="horde" />
     </dir> <!-- /templates/test -->
+    <file name=".htaccess" role="horde" />
     <file name="addressbook_list.php" role="horde" />
     <file name="menu.inc" role="horde" />
    </dir> <!-- /templates -->
@@ -778,6 +784,13 @@
    <install as="turba/addressbooks/delete.php" name="addressbooks/delete.php" />
    <install as="turba/addressbooks/edit.php" name="addressbooks/edit.php" />
    <install as="turba/addressbooks/index.php" name="addressbooks/index.php" />
+   <install as="turba-convert-datatree-shares-to-sql" name="bin/turba-convert-datatree-shares-to-sql" />
+   <install as="turba-convert-sql-shares-to-sqlng" name="bin/turba-convert-sql-shares-to-sqlng" />
+   <install as="turba-import-squirrelmail-file-abook" name="bin/turba-import-squirrelmail-file-abook" />
+   <install as="turba-import-squirrelmail-sql-abook" name="bin/turba-import-squirrelmail-sql-abook" />
+   <install as="turba-import-vcards" name="bin/turba-import-vcards" />
+   <install as="turba-public-to-horde-share" name="bin/turba-public-to-horde-share" />
+   <install as="turba/config/.htaccess" name="config/.htaccess" />
    <install as="turba/config/attributes.php" name="config/attributes.php" />
    <install as="turba/config/backends.php" name="config/backends.php" />
    <install as="turba/config/conf.xml" name="config/conf.xml" />
@@ -805,6 +818,7 @@
    <install as="turba/js/columnprefs.js" name="js/columnprefs.js" />
    <install as="turba/js/contact_tabs.js" name="js/contact_tabs.js" />
    <install as="turba/js/search.js" name="js/search.js" />
+   <install as=".htaccess" name="lib/.htaccess" />
    <install as="turba/lib/Api.php" name="lib/Api.php" />
    <install as="turba/lib/Application.php" name="lib/Application.php" />
    <install as="turba/lib/Driver.php" name="lib/Driver.php" />
@@ -864,6 +878,7 @@
    <install as="turba/lib/View/List.php" name="lib/View/List.php" />
    <install as="turba/lib/View/List/AlphaFilter.php" name="lib/View/List/AlphaFilter.php" />
    <install as="turba/lib/View/List/PageFilter.php" name="lib/View/List/PageFilter.php" />
+   <install as="turba/locale/.htaccess" name="locale/.htaccess" />
    <install as="turba/locale/turba.pot" name="locale/turba.pot" />
    <install as="turba/locale/ar/LC_MESSAGES/turba.mo" name="locale/ar/LC_MESSAGES/turba.mo" />
    <install as="turba/locale/ar/LC_MESSAGES/turba.po" name="locale/ar/LC_MESSAGES/turba.po" />
@@ -959,15 +974,11 @@
    <install as="turba/migration/3_turba_upgrade_sqlng.php" name="migration/3_turba_upgrade_sqlng.php" />
    <install as="turba/migration/4_turba_upgrade_sqlhierarchical.php" name="migration/4_turba_upgrade_sqlhierarchical.php" />
    <install as="turba/migration/5_turba_upgrade_sqlnghierarchical.php" name="migration/5_turba_upgrade_sqlnghierarchical.php" />
-   <install as="scripts/import_squirrelmail_file_abook.php" name="scripts/import_squirrelmail_file_abook.php" />
-   <install as="scripts/import_squirrelmail_sql_abook.php" name="scripts/import_squirrelmail_sql_abook.php" />
-   <install as="scripts/import_vcards.php" name="scripts/import_vcards.php" />
+   <install as="scripts/.htaccess" name="scripts/.htaccess" />
    <install as="scripts/Turba.reg" name="scripts/Turba.reg" />
    <install as="scripts/ldap/addou" name="scripts/ldap/addou" />
    <install as="scripts/ldap/addou.pl" name="scripts/ldap/addou.pl" />
-   <install as="scripts/upgrades/convert_datatree_shares_to_sql.php" name="scripts/upgrades/convert_datatree_shares_to_sql.php" />
-   <install as="scripts/upgrades/convert_sql_shares_to_sqlng.php" name="scripts/upgrades/convert_sql_shares_to_sqlng.php" />
-   <install as="scripts/upgrades/public_to_horde_share.php" name="scripts/upgrades/public_to_horde_share.php" />
+   <install as="turba/templates/.htaccess" name="templates/.htaccess" />
    <install as="turba/templates/addressbook_list.php" name="templates/addressbook_list.php" />
    <install as="turba/templates/menu.inc" name="templates/menu.inc" />
    <install as="turba/templates/block/minisearch.inc" name="templates/block/minisearch.inc" />
@@ -1117,13 +1128,16 @@
   <release>
    <version>
     <release>3.0.0</release>
-    <api>3.0.0</api></version>
+    <api>3.0.0</api>
+   </version>
    <stability>
     <release>beta</release>
-    <api>beta</api></stability>
-   <date>2011-03-29</date>
+    <api>beta</api>
+   </stability>
+   <date>2011-03-31</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Move all executable scripts to bin/ and prefix with turba-.
 * [jan] Add fields to the first address if multiple passed to addField() API method (Request #3482).
    </notes>
   </release>
