@@ -2,6 +2,7 @@
 v3.0
 ----
 
+[jan] Move all executable scripts to bin/ and prefix with turba-.
 [jan] Add fields to the first address if multiple passed to addField() API
       method (Request #3482).
 
